<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>cn.home1</groupId>
        <artifactId>build-docker</artifactId>
        <version>0.0.1.OSS</version>
    </parent>

    <artifactId>maven-build-java9</artifactId>
    <description>Parent pom for maven projects that use java 9</description>
    <name>maven-build-java9</name>
    <packaging>pom</packaging>
    <version>0.0.1.OSS-SNAPSHOT</version>

    <properties>
        <!-- Runtime modules for java9 -->
        <javax.activation.version>1.1.1</javax.activation.version>
        <jaxb-api.version>2.3.0</jaxb-api.version>

        <java.version>9</java.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.spotify</groupId>
                    <artifactId>docker-maven-plugin</artifactId>
                    <dependencies>
                        <dependency>
                            <groupId>javax.activation</groupId>
                            <artifactId>activation</artifactId>
                            <version>${javax.activation.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-toolchains-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>${java.version}</version>
                            <vendor>oracle</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerVersion>${java.version}</compilerVersion>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>${jvmArguments.addModules}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--add-modules ${jvmArguments.addModules} ${argLine}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <argLine>--add-modules ${jvmArguments.addModules} ${argLine}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <configuration>
                    <rules>
                        <requireJavaVersion>
                            <message>
                                <![CDATA[You are running an older version of Java. This application requires at least JDK ${java.version}.]]>
                            </message>
                            <version>[${java.version}.0,)</version>
                        </requireJavaVersion>
                    </rules>
                    <fail>true</fail>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- @formatter:off -->
            <dependency><groupId>javax.activation</groupId><artifactId>activation</artifactId><version>${javax.activation.version}</version></dependency>
            <!-- Hibernate java.lang.NoClassDefFoundError: javax/xml/bind/JAXBException -->
            <dependency><groupId>javax.xml.bind</groupId><artifactId>jaxb-api</artifactId><version>${jaxb-api.version}</version></dependency>
            <!-- @formatter:on -->
        </dependencies>
    </dependencyManagement>

    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-pmd-plugin</artifactId>
                <configuration>
                    <targetJdk>${java.version}</targetJdk>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <id>default-jvmArguments-addModules</id>
            <activation>
                <property>
                    <name>!jvmArguments.addModules</name>
                </property>
            </activation>
            <properties>
                <jvmArguments.addModules>java.xml.bind,java.xml.ws,java.xml.ws.annotation</jvmArguments.addModules>
            </properties>
        </profile>
    </profiles>

    <!-- @formatter:off -->
    <repositories>
        <!-- Make artifacts in OSSRH-snapshots available -->
        <repository>
            <id>OSSRH-snapshots</id>
            <name>central snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </repository>
    </repositories>
    <!-- @formatter:on -->
</project>
